--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "first-pet",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/YaroslavBorshevsky812/Carlos-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "sass": "^1.34.0",
     "vanta": "^0.5.21",
     "web-vitals": "^1.1.1"
@@ -19,7 +23,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
+    
   },
   "eslintConfig": {
     "extends": [
